<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BED5A5"
    tools:context=".RegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/add_account"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/purple_700"
        android:textSize="50sp"
        android:textStyle="bold"></TextView>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileImage"
        android:layout_width="100sp"
        android:layout_height="120sp"
        android:layout_gravity="center"
        android:scaleType="centerInside"
        app:civ_border_color="@color/white"
        app:civ_border_width="2sp"
        android:textAlignment="center"
        android:src="@drawable/ic_baseline_person_24"
        android:contentDescription="@string/todo"
        ></de.hdodenhof.circleimageview.CircleImageView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add a photo"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:gravity="top"
        android:textAlignment="gravity"
        ></TextView>

    <EditText
        android:id="@+id/fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_margin="10sp"
        android:background="@drawable/design"
        android:gravity="center"
        android:hint="@string/enter_your_full_name"
        android:inputType="textPersonName"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:minHeight="48sp"
        android:textColorHint="#78909C"
        android:textSize="25sp"
        android:autofillHints="true"
        android:textIsSelectable="true"
        ></EditText>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10sp"
        android:background="@drawable/design"
        android:gravity="center"
        android:textAlignment="center"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:minHeight="48sp"
        android:textColorHint="#78909C"
        android:textSize="25sp"
        android:textIsSelectable="true"
        android:autofillHints="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        ></EditText>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10sp"
        android:background="@drawable/design"
        android:gravity="center"
        android:textAlignment="center"
        android:hint="@string/enter_your_password"
        android:inputType="textVisiblePassword"
        android:passwordToggleEnabled="true"
        android:minHeight="48sp"
        android:textColorHint="#78909C"
        android:textSize="25sp"
        android:textIsSelectable="true"
        android:autofillHints="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        ></EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/gender"
        android:textStyle="normal"
        android:textColor="@color/black"
        android:layout_marginTop="10sp"
        android:layout_marginStart="10sp"
        android:layout_gravity="left"
        android:gravity="start"
        ></TextView>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="110sp"
        android:layout_height="50sp"
        android:layout_marginLeft="5sp"
        android:background="#EAECE9"
        tools:ignore="SpeakableTextPresentCheck"></Spinner>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/register"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="#D30808"
        android:background="@drawable/design"
        android:id="@+id/register"
        android:layout_margin="5sp"
        android:textAllCaps="false"
        ></Button>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Have an account?"
        android:textColor="#2E2323"
        android:textSize="25sp"
        android:layout_marginTop="20sp"
        android:layout_marginLeft="10sp"
        android:layout_gravity="left"
        android:gravity="left"
        ></TextView>

    <Button
        android:onClick="login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="Login here"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="#000"
        android:background="#fff"
        android:id="@+id/logIn"
        android:layout_margin="1dp"
        android:textAllCaps="false"
        ></Button>

</LinearLayout>